--- a/WWW/css/style.css
+++ b/WWW/css/style.css
@@ -4,11 +4,40 @@
  * @Email:  karpisek.m@email.cz
  * @Project: IFJ
  * @Last modified by:   miro
- * @Last modified time: 26-11-2017
+ * @Last modified time: 27-11-2017
  */
 
 body {
-    margin-top: 80px;
+    margin-top: 100px;
+}
+
+table {
+    min-width: 800px;
+}
+
+tbody {
+    display:block;
+    height:610px;
+    overflow:auto;
+}
+thead, tbody tr {
+    display:table;
+    width:100%;
+    table-layout:fixed;
+}
+
+td {
+    padding: 0px; !importatnt
+    text-align: center;
+}
+
+thead {
+    width: calc( 100% - 1em );
+}
+
+#tableBox {
+    overflow-y: scroll;
+    height: 500px;
 }
 
 .paddingOff {
@@ -18,6 +47,15 @@ body {
 .mt10{
     margin-top:10px;
 }
+
+.mt20{
+    margin-top:20px;
+}
+
+.mt15{
+    margin-top:15px;
+}
+
 
 .mt5{
     margin-top:5px;
