--- a/WWW/css/style.css
+++ b/WWW/css/style.css
@@ -81,6 +81,16 @@ thead {
     text-align: center;
 }
 
+.infoBox {
+    display: inline-block;
+    position: fixed;
+    top: 60px;
+    height: 70px;
+    /*text-align: center;*/
+}
+
+
+
 .outer {
     display: table;
     position: absolute;
